# py-api-spy

./: .gitignore  README.md  demo_fastapi.py  pyproject.toml
api_spy/: __init__.py  core.py  django.py  fastapi.py
py_api_spy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
